amount validation regexp fixed; little refactoring; again app works 'for a while' but it still need to chage current html parsing method (that is very awful) to fetching data by parsing xml that is available publicly